[workspace]
members = ["node", "parser", "macro_deserialize"]

[workspace.package]
name = "json_study"
version = "0.1.0"
publish = false
edition = "2024"
license = "MIT"

[workspace.dependencies]
node = { path = "./node" }
parser = { path = "./parser" }
macro_deserialize = { path = "./macro_deserialize" }
thiserror = "2.0.16"
